fix: header overflow hidden, content not visible

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -31,7 +31,6 @@
         height: 80px;
         background-color: #fff;
         border-bottom: 1px solid #eef1f1;
-        overflow: hidden;
         padding-left: 47px;
         padding-right: 47px;
         position: fixed;
